--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,12 +7,13 @@
     tools:context="com.example.savqa.love.LoginActivity">
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/loginBtnVK"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Войти через ВК"
-        android:id="@+id/login_button"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="90dp" />
+        android:layout_marginTop="16dp"
+        android:text="Login with VK"
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp"
+        android:layout_gravity="right" />
 
 </RelativeLayout>
