--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,8 +21,7 @@
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
         android:layout_gravity="center_vertical"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_centerVertical="true"/>
 
     <Button
         android:id="@+id/signUpBtn"
@@ -32,18 +31,17 @@
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
         android:layout_gravity="right"
-        android:layout_below="@+id/loginBtnVK"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/loginBtnVK"/>
 
     <EditText
+        android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
         android:hint="@string/prompt_username"
-        android:id="@+id/username"
-        android:layout_marginTop="69dp"
+        android:inputType="textEmailAddress"
+        android:maxLines="1"
+        android:singleLine="true"/>
 
-     />
 
     <EditText
         android:id="@+id/password"
@@ -52,8 +50,7 @@
         android:hint="@string/prompt_password"
         android:inputType="textPassword"
         android:maxLines="1"
-        android:singleLine="true"
-/>
+        android:singleLine="true"/>
 
     <Button
         android:layout_width="fill_parent"
