--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,18 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ava"
-        android:layout_centerHorizontal="true"/>
 
     <TextView android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
-        android:layout_below="@+id/ava"
         android:textSize="20dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:layout_centerInParent="true"/>
 
     <Button
         style="?android:attr/buttonStyleSmall"
