--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-<TextView android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:text="Подбор пары"
-    android:textSize="20dp"
-    android:layout_centerInParent="true"/>
+    <ListView
+        android:id="@+id/lwMain"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
 
+    <TextView android:id="@+id/empty_el"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="20dp"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
