--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -18,7 +18,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_name"
-                android:inputType="textPersonName"
+                android:inputType="textCapSentences"
                 android:maxLines="1"
                 android:singleLine="true" />
             <EditText
