work with filter
- add filter button
- change settings button
- add new filter activity

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,12 +13,10 @@
         android:layout_centerInParent="true"/>
 
     <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/action_settings"
         android:id="@+id/set_button"
-        android:layout_below="@+id/editText"
         android:layout_centerHorizontal="true"  />
 
 </RelativeLayout>
