--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,9 +6,16 @@
 
     <ListView
         android:id="@+id/lwMain"
+        android:layout_below="@+id/filter_button"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/filter"
+        android:id="@+id/filter_button" />
 
     <TextView android:id="@+id/empty_el"
         android:layout_width="fill_parent"
