--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -32,4 +32,12 @@
 
     </RadioGroup>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/filter_search"
+        android:id="@+id/filterButton"
+        android:layout_below="@+id/radioFilterSex"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
